# NNIE-lite

./: .gitignore  CMakeLists.txt  run.sh
Converter/ENet/: image_ref_list.txt  model_inst.cfg
build_opencv/: build_opencv_himix100.sh  build_opencv_hisiboard.sh  build_opencv_nnie.sh
data/nnie_model/segmentation/: tile_defect.wk  tile_defect2.wk  wood_defect.wk  wood_defect2.wk
examples/: GeneralSeg.cpp
inc/: GeneralSeg.h  ins_nnie_interface.h  yolo_post.h  yolov5.h
release/: Cls_Exe  Seg_Exe  alg_Exe
src/: GeneralSeg.cpp  ins_nnie_interface.cpp  nnie_core.c  yolo_post.cpp  yolov5.cpp
